# AI_solo_coder_task_B_049

./: .dockerignore  CMakeLists.txt  Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  backend_single.cpp  build_linux.sh  build_windows.bat  config.yaml  docker-compose.yml  nginx.conf  run_windows.bat
backend/: CMakeLists.txt
backend/include/: anomaly_detector.h  apriori_recommender.h  ble_data_receiver.h  data_processor.h  data_types.h  dingtalk_notifier.h  http_server.h  meridian_energy_balancer.h  meridian_network_analyzer.h  mongodb_manager.h  needle_technique_classifier.h  q_learning_advisor.h  random_forest_model.h  websocket_manager.h
backend/modules/acupuncture_recommend/include/: acupuncture_recommender.h
backend/modules/acupuncture_recommend/src/: acupuncture_recommender.cpp
backend/modules/common/include/: thread_pool.h
backend/modules/common/src/: thread_pool.cpp
backend/modules/energy_radar/include/: energy_radar.h
backend/modules/energy_radar/src/: energy_radar.cpp
backend/modules/maneuver_cnn/include/: maneuver_cnn.h
backend/modules/maneuver_cnn/src/: maneuver_cnn.cpp
backend/modules/rl_adapter/include/: rl_adapter.h
backend/modules/rl_adapter/src/: rl_adapter.cpp
backend/services/: CMakeLists.txt
backend/services/alerter/: main.cpp
backend/services/analyzer/: main.cpp
backend/services/ingest/: main.cpp
backend/services/predictor/: main.cpp
backend/services/topology/: main.cpp
backend/shared/include/: config.h  logger.h  metrics_collector.h
backend/src/: acupoint_data.cpp  anomaly_detector.cpp  apriori_recommender.cpp  ble_data_receiver.cpp  data_processor.cpp  dingtalk_notifier.cpp  http_server.cpp  main.cpp  main_crow.cpp  meridian_energy_balancer.cpp  meridian_network_analyzer.cpp  mongodb_manager.cpp  needle_technique_classifier.cpp  q_learning_advisor.cpp  random_forest_model.cpp  websocket_manager.cpp
backend/tests/: CMakeLists.txt  main.cpp  test_apriori.cpp  test_framework.h  test_meridian_energy.cpp  test_needle_technique.cpp  test_q_learning.cpp
ble_simulator/: CMakeLists.txt
ble_simulator/include/: ble_simulator.h
ble_simulator/src/: ble_simulator.cpp  main.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: AdvancedAnalysis.js  CurveChart.js  MeridianCanvas.js  app.js  meridian_renderer.js
mongodb/: init_db.js
monitoring/: prometheus.yml
monitoring/grafana-dashboards/: provider.yml
